@@ -41,6 +41,7 @@ import org.labkey.api.search.SearchService;
 import org.labkey.api.security.User;
 import org.labkey.api.services.ServiceRegistry;
 import org.labkey.api.util.ContextListener;
+import org.labkey.api.util.DebugInfoDumper;
 import org.labkey.api.util.ExceptionUtil;
 import org.labkey.api.util.Formats;
 import org.labkey.api.util.GUID;
@@ -51,6 +52,7 @@ import org.labkey.api.util.MultisetRateAccumulator;
 import org.labkey.api.util.PageFlowUtil;
 import org.labkey.api.util.Pair;
 import org.labkey.api.util.Path;
+import org.labkey.api.util.QuietCloser;
 import org.labkey.api.util.ShutdownListener;
 import org.labkey.api.util.StringUtilsLabKey;
 import org.labkey.api.util.SystemMaintenance;
@@ -227,7 +229,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
                 }
             };
             addItem(i);
-            final Item r = new Item(this, (q) -> queueItem(i), pri, null);
+            final Item r = new Item(this, (_) -> queueItem(i), pri, null);
             queueItem(r);
         }
 
@@ -412,7 +414,13 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
     }
 
 
-    final Item _commitItem = new Item(null, (q) -> {}, PRIORITY.commit, null);
+    private static String getSearchThreadDumpContext(Item i)
+    {
+        String taskDescription = i._task != null ? i._task.getDescription() : "unknown";
+        return "Search item: " + i._id + " (task: " + taskDescription + ")";
+    }
+
+    final Item _commitItem = new Item(null, (_) -> {}, PRIORITY.commit, null);
 
 
     @Override
@@ -469,7 +477,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
     @Override
     public final void deleteContainer(final String id)
     {
-        Consumer<TaskIndexingQueue> r = (q) -> {
+        Consumer<TaskIndexingQueue> r = (_) -> {
             deleteIndexedContainer(id);
             synchronized (_commitLock)
             {
@@ -512,7 +520,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
     public void reindexContainerFiles(Container c)
     {
         //Create new runnable instead of using existing methods so they can be run within the same job.
-        Consumer<TaskIndexingQueue> r = (q) -> {
+        Consumer<TaskIndexingQueue> r = (_) -> {
             //Remove old items
             clearIndexedFileSystemFiles(c);
 
@@ -721,7 +729,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
         });
         // The indexer uses multiple threads for different types of work. Queue a Runnable first, and when it executes,
         // queue an Item to ensure all queues are cleared
-        task.addRunnable(null, priority, (q) -> {
+        task.addRunnable(null, priority, (_) -> {
             logQueueStatus("drainQueue's Runnable.run()");
             task.addNoop(priority);
         });
@@ -865,7 +873,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
             if (resourceResolverKeyIdentifier == null)
                 continue;
             resolverIdentifiers
-                    .computeIfAbsent(resourceResolverKeyIdentifier.first, (k) -> new HashMap<>())
+                    .computeIfAbsent(resourceResolverKeyIdentifier.first, (_) -> new HashMap<>())
                     .put(resourceResolverKeyIdentifier.second, resourceIdentifier);
         }
 
@@ -1078,6 +1086,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
         {
             Item i = null;
             boolean success = true;
+            QuietCloser threadDumpContext = null;
 
             try
             {
@@ -1086,9 +1095,10 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
                 if (null != i)
                 {
                     final Item item = i;
+                    threadDumpContext = DebugInfoDumper.pushThreadDumpContext(getSearchThreadDumpContext(item));
                     while (!_shuttingDown && _itemQueue.size() > 1000)
                     {
-                        try {Thread.sleep(100);}catch(InterruptedException ignored){}
+                        try {Thread.sleep(100);}catch(InterruptedException _){}
                     }
 
                     Container c;
@@ -1149,6 +1159,8 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
             }
             finally
             {
+                if (threadDumpContext != null)
+                    threadDumpContext.close();
                 if (null != i)
                 {
                     try
@@ -1248,6 +1260,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
     {
         Item i = null;
         boolean success = false;
+        QuietCloser threadDumpContext = null;
         try
         {
             i = getItemToIndex();
@@ -1267,6 +1280,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
                 return;
             }
 
+            threadDumpContext = DebugInfoDumper.pushThreadDumpContext(getSearchThreadDumpContext(i));
             WebdavResource r = i.getResource();
             if (null == r || !r.exists())
             {
@@ -1331,6 +1345,8 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
         {
             try
             {
+                if (threadDumpContext != null)
+                    threadDumpContext.close();
                 if (null != i)
                     i.complete(success);
             }
@@ -1525,7 +1541,7 @@ public abstract class AbstractSearchService implements SearchService, ShutdownLi
             history.addAll(_history);
         }
 
-        IndexerRateAccumulator historyAccumulator = new IndexerRateAccumulator(history.get(history.size() - 1).getStart());
+        IndexerRateAccumulator historyAccumulator = new IndexerRateAccumulator(history.getLast().getStart());
         SimpleDateFormat f = new SimpleDateFormat("h:mm a");
         StringBuilder hourly = new StringBuilder();
         hourly.append("<table>");
